--- a/a/al/ali/alienskin.com.html
+++ b/a/al/ali/alienskin.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the alienskin.com privacy policy that was archived on 2013-10-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131023100750id_/http%3A//www.alienskin.com/about_us/privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the alienskin.com privacy policy that was archived on 2014-02-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140215222310id_/http%3A//www.alienskin.com/about_us/privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/subpages.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"> 
@@ -49,7 +49,7 @@
   }, true);
 </script>
 <link href="http://www.alienskin.com/css/search.css" rel="stylesheet" type="text/css">
-<a href="https://www.alienskin.com/store/Cart.aspx" onmouseover="changeImages('nav_cart', 'http://www.alienskin.com/images/cart-tab-over.png'); return true;" onmouseout="changeImages('nav_cart', 'http://www.alienskin.com/images/cart-tab.png'); return true;"> <img src="http://www.alienskin.com/images/cart-tab.png" alt="view cart" name="nav_cart" border="0"></a></div>
+<a href="https://app.alienskin.com/store/Cart.aspx" onmouseover="changeImages('nav_cart', 'http://www.alienskin.com/images/cart-tab-over.png'); return true;" onmouseout="changeImages('nav_cart', 'http://www.alienskin.com/images/cart-tab.png'); return true;"> <img src="http://www.alienskin.com/images/cart-tab.png" alt="view cart" name="nav_cart" border="0"></a></div>
 <!-- +++++++++++++++++++++++++++++++++++ Logo ++++++++++++++++++++++++++++++++++++++++++ -->
 <div id="logo"><a href="http://www.alienskin.com"><img src="../images/alienskin-logo.png" alt="Alien Skin Software" border="0"></a></div>
 <!-- +++++++++++++++++++++++++++++++++++ Main Nav ++++++++++++++++++++++++++++++++++++++++++ -->
@@ -70,8 +70,9 @@
 		   <li><a href="https://app.alienskin.com/store/RecoverLicenses/">License Code Lookup</a></li>
            <li><a href="https://alienskin.zendesk.com/hc/en-us/articles/200144955-Chat-support">Chat Support</a></li>
 		   <li><a href="https://support.alienskin.com/hc/en-us/requests/new">Submit Request</a></li>
+		   <li><a href="http://www.alienskin.com/downloads/">Download Updates</a></li>
         </ul></li>
-        <li><a href="http://www.alienskin.com/downloads/">downloads</a></li>
+        <li><a href="http://www.alienskin.com/downloads/">free trials</a></li>
         <li><a href="http://www.alienskin.com/tutorials/index.aspx">tutorials</a></li>
 		<li><a href="http://blog.alienskin.com">blog</a></li>
         <li><a href="http://www.alienskin.com/about_us/index.aspx" class="MenuBarItemSubmenu rmRootLinkHover">company</a>
@@ -84,7 +85,7 @@
             <li><a href="http://www.alienskin.com/about_us/the-name.aspx">The Name</a></li>
             <li><a href="http://www.alienskin.com/about_us/jobs.aspx">Jobs</a></li>
             <li><a href="http://www.alienskin.com/about_us/privacy.aspx">Privacy</a></li></ul></li>
-        <li class="last"><a href="https://www.alienskin.com/store/">store</a>
+        <li class="last"><a href="https://app.alienskin.com/store/">store</a>
         </li></ul>
 <script type="text/javascript">
 <!--
@@ -136,10 +137,10 @@ top.location.href = goURL;
 	<option value="http://www.alienskin.com/about_us/adam-haile.aspx">Adam Haile</option>
     <option value="http://www.alienskin.com/about_us/asdiel-echevarria.aspx">Asdiel Echevarria</option>
     <option value="http://www.alienskin.com/about_us/finley-lee.aspx">Finley Lee </option>
-	<option value="http://www.alienskin.com/about_us/gary-matthews.aspx">Gary Matthews </option>
     <option value="http://www.alienskin.com/about_us/jeff-butterworth.aspx">Jeff Butterworth </option>
     <option value="http://www.alienskin.com/about_us/jimmy-beech.aspx">Jimmy Beech </option>
-    <option value="http://www.alienskin.com/about_us/mary-mansfield.aspx">Mary Gukelberger</option>
+    <option value="http://www.alienskin.com/about_us/joe-payne.aspx">Joe Payne </option>
+	<option value="http://www.alienskin.com/about_us/mary-mansfield.aspx">Mary Gukelberger</option>
 	<option value="http://www.alienskin.com/about_us/matt-king.aspx">Matt King</option>
     <option value="http://www.alienskin.com/about_us/mike-erickson.aspx">Mike Erickson</option>
 	<option value="http://www.alienskin.com/about_us/robert-lounsberry.aspx">Robert Lounsberry</option>
