--- a/l/la/lag/lagrangesystems.com.html
+++ b/l/la/lag/lagrangesystems.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the lagrangesystems.com privacy policy that was archived on 2013-11-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131118061121id_/http%3A//lagrangesystems.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the lagrangesystems.com privacy policy that was archived on 2014-02-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140215232440id_/http%3A//www.lagrangesystems.com/privacy-policy) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html class=" js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths" lang="en"><!--<![endif]--><head>
+<!DOCTYPE html><html class="no-js" lang="en"><!--<![endif]--><head>
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <title>Lagrange Systems - Privacy Policy</title>
@@ -12,10 +12,11 @@
     <meta content="NOODP" name="googlebot">
     <meta content="NOYDIR" name="slurp">
     <meta content="NOODP" name="msnbot">
-    <link href="/favicon.ico" rel="shortcut icon">
-    <link href="/css/normalize.css" rel="stylesheet">
-    <link href="/css/site.css" rel="stylesheet">
-    <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="/js/vendor/modernizr-2.6.1.min.js"></script>
+    <link href="http://www.lagrangesystems.com/xfavicon.ico.pagespeed.ic.mdzeO1Wg69.png" rel="shortcut icon">
+    <link href="http://www.lagrangesystems.com/css/normalize.css+site.css.pagespeed.cc.ZU2HDYPA28.css" rel="stylesheet">
+    
+    <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="http://www.lagrangesystems.com/js/vendor/modernizr-2.6.1.min.js.pagespeed.jm.bXmbWLoZk0.js"></script>
+    <!-- /%script{:src => "/js/vendor/retina_test.js"} -->
   </head>
   <body class="privacy_policy">
     <header class="navbar" role="banner">
@@ -31,7 +32,7 @@
           </div>
           <div class="logo pull-left">
             <a href="/">
-              <img alt="Lagrange Systems Logo" src="/img/langrange_logo.png">
+              <img alt="Lagrange Systems Logo" src="http://www.lagrangesystems.com/img/xlangrange_logo.png.pagespeed.ic.arv9S7JYHQ.png">
             </a>
           </div>
           <ul class="nav clearfix inline-nav pull-right" role="navigation">
@@ -42,7 +43,10 @@
               <a href="/services">Services</a>
             </li>
             <li class="technology-link">
-              <a href="/our-technology">Our Technology</a>
+              <a href="/our-technology">Technology</a>
+            </li>
+            <li class="solutions-link">
+              <a href="/solutions">Solutions</a>
             </li>
             <li class="company-link">
               <a href="/company">Company</a>
@@ -251,28 +255,12 @@
       </div>
     </footer>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-    <script>
-      window.jQuery || document.write('<script src="/js/vendor/jquery-1.10.1.min.js"><\/script>')
-    </script><script src="/js/vendor/jquery-1.10.1.min.js"></script>
-    <script src="/js/plugins.js"></script>
-    <script src="/js/main.js"></script>
-    <script src="/js/vendor/retina.js"></script>
-    <script>
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-28284002-1']);
-      _gaq.push(['_setDomainName', 'lagrangesystems.com']);
-      _gaq.push(['_trackPageview']);
-      
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-    </script>
-    <script>
-      imgsrc = location.protocol + '//www.visitortracklog.com/loghit.asp?id=108041&vr=4.0&rp=' + escape(document.referrer) + '&pa=' + escape(document.URL);
-      document.write('<img border="0" class="visitortracklog" alt="" src="' + imgsrc + '">');
-    </script><img border="0" class="visitortracklog" alt="" src="https://www.visitortracklog.com/loghit.asp?id=108041&amp;vr=4.0&amp;rp=&amp;pa=https%3A//web.archive.org/web/20131118061121id_/http%253A//lagrangesystems.com/privacy-policy">
+    <script>window.jQuery||document.write('<script src="/js/vendor/jquery-1.10.1.min.js"><\/script>')</script><script src="/js/vendor/jquery-1.10.1.min.js"></script>
+    <script src="http://www.lagrangesystems.com/js/plugins.js.pagespeed.jm.Rg1NEPsQT4.js"></script>
+    <script src="http://www.lagrangesystems.com/js/main.js+vendor,_retina.js.pagespeed.jc.vwXjgU0DkO.js"></script><script>eval(mod_pagespeed_XYXCDI$GL5);</script>
+    <script>eval(mod_pagespeed_6HcPxZF9uC);</script>
+    <script>var _gaq=_gaq||[];_gaq.push(['_setAccount','UA-28284002-1']);_gaq.push(['_setDomainName','lagrangesystems.com']);_gaq.push(['_trackPageview']);(function(){var ga=document.createElement('script');ga.type='text/javascript';ga.async=true;ga.src=('https:'==document.location.protocol?'https://ssl':'http://www')+'.google-analytics.com/ga.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(ga,s);})();</script>
+    <script>imgsrc=location.protocol+'//www.visitortracklog.com/loghit.asp?id=108041&vr=4.0&rp='+escape(document.referrer)+'&pa='+escape(document.URL);document.write('<img border="0" class="visitortracklog" alt="" src="'+imgsrc+'">');</script><img border="0" class="visitortracklog" alt="" src="https://www.visitortracklog.com/loghit.asp?id=108041&amp;vr=4.0&amp;rp=&amp;pa=https%3A//web.archive.org/web/20140215232440id_/http%3A//www.lagrangesystems.com/privacy-policy/">
   
 
 </body></html>
