--- a/s/sc/sco/scorehero.com.html
+++ b/s/sc/sco/scorehero.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the scorehero.com privacy policy that was archived on 2013-09-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130926194355id_/http%3A//www.scorehero.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the scorehero.com privacy policy that was archived on 2014-02-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140216010250id_/http%3A//www.scorehero.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head>
   <title>Score Hero - Privacy Policy</title>
@@ -196,8 +196,8 @@ urchinTracker();
 
 <!-- Begin comScore Tag -->
 <script>
-    document.write(unescape("%
-3Cscript src='" + (document.location.protocol == "https:" ? "https://sb" : "http://b") + ".scorecardresearch.com/beacon.js' %3E%3C/script%3E")); </script>
+    document.write(unescape("%3Cscript src='" + (document.location.protocol == "https:" ? "https://sb" : "http://b") + ".scorecardresearch.com/beacon.js' %3E%3C/script%3E"));
+</script><script src="https://sb.scorecardresearch.com/beacon.js"></script>
 
 <script>
   COMSCORE.beacon({
