--- a/t/to/top/topdogtrading.com.html
+++ b/t/to/top/topdogtrading.com.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the topdogtrading.com privacy policy that was archived on 2013-08-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130820234135id_/http%3A//www.topdogtrading.com/PrivacyPolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the topdogtrading.com privacy policy that was archived on 2014-02-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140216014854id_/http%3A//www.topdogtrading.com/PrivacyPolicy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>stock market trading and forex trading strategy - PrivacyPolicy</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link type="text/css" rel="stylesheet" href="261_xsp_styles.css">
-<link type="text/css" rel="stylesheet" href="INFO_BAR_MENU.css">
+<link rel="canonical" href="http://www.topdogtrading.com/PrivacyPolicy.html"><link type="text/css" rel="stylesheet" href="INFO_BAR_MENU.css">
 <script type="text/javascript" src="milonic_src.js"></script>
 <script type="text/javascript" src="mmenudom.js"></script>
 
