--- a/t/tu/tux/tuxpi.com.html
+++ b/t/tu/tux/tuxpi.com.html
@@ -1,11 +1,14 @@
-<!--The following is the downloaded HTML source of the tuxpi.com privacy policy that was archived on 2013-11-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131115062530id_/http%3A//www.tuxpi.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tuxpi.com privacy policy that was archived on 2014-02-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140216041140id_/http%3A//www.tuxpi.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
+<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" async="" src="/static/js/3.24.js"></script><script language="JavaScript" type="text/javascript">
+if (top.location != self.location) top.location = self.location;
+</script>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta http-equiv="Pragma" content="no-cache">
 <title>Privacy Policy</title>
-<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" async="" src="/static/js/3.24.js"></script><script type="text/javascript">
+<script type="text/javascript">
 <!--
 (function() {
     var s = document.createElement('script');
