--- a/g/ge/get/getmyfilesnow.us.html
+++ b/g/ge/get/getmyfilesnow.us.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the getmyfilesnow.us privacy policy that was archived on 2013-07-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130721220057id_/http%3A//www.getmyfilesnow.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the getmyfilesnow.us privacy policy that was archived on 2014-02-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140216045340id_/http%3A//www.getmyfilesnow.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
         <title>GetMyFilesNow - Download the files you want now</title>
@@ -271,11 +271,11 @@ new versions. By installing the extensions,    <strong>you agree to automaticall
         </div>
         <div id="footer">
           <div id="footer_links-lps">
-              <a href="/downloads/quickdownloader.exe" class="footer_link-lps">Download</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;
+              <a href="/downloads/getmyfilesnow.xpi" class="footer_link-lps">Download</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;
               <a href="mailto:info@getmyfilesnow.com" class="footer_link-lps">Contact Us</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;
               <a href="/support" class="footer_link-lps">Support</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;
               <a href="/privacy" class="footer_link-lps">Privacy Policy</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;
-              <a href="/terms" class="footer_link-lps">Terms of Use</a>
+              <a href="/tos" class="footer_link-lps">Terms of Use</a>
           </div>
       </div>    
 
