--- a/b/bi/bid/bidhere.com.html
+++ b/b/bi/bid/bidhere.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bidhere.com privacy policy that was archived on 2013-04-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130424162330id_/http%3A//www.bidhere.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bidhere.com privacy policy that was archived on 2014-02-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140216092339id_/http%3A//www.bidhere.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 
@@ -12,7 +12,7 @@
     var bid_costs = 0.6;
     var day_names = ["Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"];
     var month_names = ["January","February","March","April","May","June","July","August","September","October","November","December"];
-    var utc_offset = 0;
+    var utc_offset = 14400000;
   //]]>
 </script>
 
@@ -26,9 +26,9 @@
 <script src='//html5shiv.googlecode.com/svn/trunk/html5.js'></script>
 <link href="http://www.bidhere.com/assets/ie-623c313647a889b0912a1bfb449fdaca.css" media="screen" rel="stylesheet" type="text/css" />
 <![endif]-->
-<script src="http://www.bidhere.com/assets/application-eb7fff457ccef4571665456d4d9f0edb.js" type="text/javascript"></script>
+<script src="http://www.bidhere.com/assets/application-ea5b2498b0652a322a75d72e3bf8d57f.js" type="text/javascript"></script>
 <meta content="authenticity_token" name="csrf-param">
-<meta content="2JcdCy3HXQujx4Rkbxj0JKKKW1kwe8NtE9fbPcYcFNA=" name="csrf-token">
+<meta content="SoTVkmF6homE95Qfpu74Htk+KKw9+NTdLzmpJPX6eXU=" name="csrf-token">
 <script type="text/javascript">
 //<![CDATA[
 (function(d,c){var a,b,g,e;a=d.createElement('script');a.type='text/javascript';a.async=!0;a.src=('https:'===d.location.protocol?'https:':'http:')+'//api.mixpanel.com/site_media/js/api/mixpanel.2.js';b=d.getElementsByTagName('script')[0];b.parentNode.insertBefore(a,b);c._i=[];c.init=function(a,d,f){var b=c;'undefined'!==typeof f?b=c[f]=[]:f='mixpanel';g='disable track track_links track_forms register register_once unregister identify name_tag set_config'.split(' ');for(e=0;e<g.length;e++)(function(a){b[a]=function(){b.push([a].concat(Array.prototype.slice.call(arguments,0)))}})(g[e]);c._i.push([a,d,f])};window.mixpanel=c})(document,[]);mixpanel.init('ad316431368aeefb7cdd16e956eb73da');
@@ -64,7 +64,7 @@ Ok
 <nav>
 <ul class="bh-alternate" id="bh-header-top-navigation">
 <li><a href="/"><img alt="Bh-home-icon" height="21" src="http://www.bidhere.com/assets/bh-home-icon-9570ecef16a18d3284b7ab6c70783545.png" width="21"></a></li>
-<li><a href="http://btc.bidhere.com" class="bh-btc">BidHere Treasure Cards</a></li>
+<li><a href="http://btc.bidherereviews.com" class="bh-btc">BidHere Treasure Cards</a></li>
 <li><a href="http://bidherereviews.com" class="bh-review">Real Member Reviews</a></li>
 <li><a href="javascript:void(0)" class="bh-winner winner-board-trigger">Winner Board</a></li>
 <li><a href="javascript:void(0)" class="bh-shipping shipping-trigger">Shipping Guarantee</a></li>
@@ -80,7 +80,7 @@ Ok
 <div id="bh-login-container">
 <h2 class="bh-mainfonts bh-text-color-green bh-text-capital bh-text-center">Online auctions</h2>
 <div class="bh-text-center"><img alt="Bh-login-divider" height="3" src="http://www.bidhere.com/assets/bh-login-divider-cf14b0b19f23579525de70807f6d99b1.png" width="214"></div>
-<form accept-charset="UTF-8" action="https://www.bidhere.com/users/sign_in" class="user_new" id="user_new" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" type="hidden" value="2JcdCy3HXQujx4Rkbxj0JKKKW1kwe8NtE9fbPcYcFNA="></div>
+<form accept-charset="UTF-8" action="https://www.bidhere.com/users/sign_in" class="user_new" id="user_new" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" type="hidden" value="SoTVkmF6homE95Qfpu74Htk+KKw9+NTdLzmpJPX6eXU="></div>
 <input class="user_timezone" id="gtmoffset" name="gtmoffset" type="hidden" value="">
 <div class="bh-padding-top">
 <input class="bh-box" id="login_text_field" name="user[login]" placeholder="Login" size="30" type="text">
@@ -161,7 +161,7 @@ Ok
 <div class="vaucher_section">
 <div id="container">
 <div class="form">
-<form accept-charset="UTF-8" action="/dashboard/process_coupon" data-remote="true" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" type="hidden" value="2JcdCy3HXQujx4Rkbxj0JKKKW1kwe8NtE9fbPcYcFNA="></div>
+<form accept-charset="UTF-8" action="/dashboard/process_coupon" data-remote="true" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" type="hidden" value="SoTVkmF6homE95Qfpu74Htk+KKw9+NTdLzmpJPX6eXU="></div>
 <div class="ajax_container"></div>
 <div class="top">
 <div class="spinner" id="redeem_loader" style="display: none;"><img alt="Spinner" src="http://www.bidhere.com/assets/spinner-151dc7ec8aa0216815c92a6fec016ba7.gif"></div>
@@ -420,7 +420,7 @@ The   email address you provide for order processing, will only be used to send 
 <p class="style8">If   there are any questions regarding this privacy policy you may contact us using   the information below.&nbsp;</p>
 <p class="style8" style="text-align: left;">
 BidHere.com
-</p><p>1120 Ave of the Americas</p> <p>New York</p> <p>NY 10034</p> <p>USA</p> <p>+1.917.267.7472</p> <p>EIN: 27-3530607</p>
+</p><p>100 Jervois Street</p> <p>Sheung Wan</p> <p>Central</p> <p>HONG KONG</p>
 info@bidhere.com
 <p></p>
 <p class="style8">
