--- a/p/po/pos/postupstand.com.html
+++ b/p/po/pos/postupstand.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the postupstand.com privacy policy that was archived on 2013-06-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130609015337id_/http%3A//www.postupstand.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the postupstand.com privacy policy that was archived on 2014-02-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140216134732id_/http%3A//www.postupstand.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <meta name="google-site-verification" content="9unguz1lwUlKBDrrvFr5O9dIzbi5dc_cszM5k4NBWqw">
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Privacy</title>
+<title>Learn About Our Privacy Policies | Post-Up Stand Inc.</title>
 <meta name="description" content="Review Post Up Stand's Privacy Policy. Contact us with any questions or concerns.">
 <meta name="keywords" content="post up stand privacy policy">
 <meta name="robots" content="INDEX,FOLLOW">
@@ -35,19 +35,19 @@
 <![endif]-->
 
 <!-- Optimized using GTspeed -->
-<link rel="stylesheet" type="text/css" href="http://www.postupstand.com/min/?f=skin/frontend/default/theme315/css/styles.css&amp;1355868254" media="all">
-<link rel="stylesheet" type="text/css" href="http://www.postupstand.com/min/?f=skin/frontend/base/default/css/widgets.css&amp;1337264165" media="all">
+<link rel="stylesheet" type="text/css" href="http://www.postupstand.com/min/?f=skin/frontend/default/theme315/css/styles.css&amp;1386171200" media="all">
+<link rel="stylesheet" type="text/css" href="http://www.postupstand.com/min/?f=skin/frontend/base/default/css/widgets.css&amp;1376396269" media="all">
 <link rel="stylesheet" type="text/css" href="http://www.postupstand.com/min/?f=skin/frontend/default/theme315/css/magikfees.css&amp;1345225188" media="all">
 <link rel="stylesheet" type="text/css" href="http://www.postupstand.com/min/?f=skin/frontend/base/default/turnkeye/testimonial/css/testimonial.css&amp;1337787652" media="all">
-<link rel="stylesheet" type="text/css" href="http://www.postupstand.com/min/?f=skin/frontend/default/theme315/css/postupstand/style.css&amp;1352984731" media="all">
+<link rel="stylesheet" type="text/css" href="http://www.postupstand.com/min/?f=skin/frontend/default/theme315/css/postupstand/style.css&amp;1386171268" media="all">
 <link rel="stylesheet" type="text/css" href="http://www.postupstand.com/min/?f=skin/frontend/default/theme315/css/postupstand/rotator.css&amp;1350058293" media="all">
 <link rel="stylesheet" type="text/css" href="http://www.postupstand.com/min/?f=skin/frontend/default/theme315/css/print.css&amp;1305320580" media="print">
-<script type="text/javascript" src="http://www.postupstand.com/min/?f=/js/prototype/prototype.js,/js/lib/ccard.js,/js/prototype/validation.js,/js/scriptaculous/builder.js,/js/scriptaculous/effects.js,/js/scriptaculous/dragdrop.js,/js/scriptaculous/controls.js,/js/scriptaculous/slider.js,/js/varien/js.js,/js/varien/form.js,/js/varien/menu.js,/js/mage/translate.js,/js/mage/cookies.js,/js/postupstand/script.js,/js/postupstand/rotator.js&amp;1352212596"></script>
+<script type="text/javascript" src="http://www.postupstand.com/min/?f=/js/prototype/prototype.js,/js/lib/ccard.js,/js/prototype/validation.js,/js/scriptaculous/builder.js,/js/scriptaculous/effects.js,/js/scriptaculous/dragdrop.js,/js/scriptaculous/controls.js,/js/scriptaculous/slider.js,/js/varien/js.js,/js/varien/form.js,/js/varien/menu.js,/js/mage/translate.js,/js/mage/cookies.js,/js/postupstand/script.js,/js/postupstand/rotator.js&amp;1376396269"></script>
 <!--[if lt IE 8]>
 <link rel="stylesheet" type="text/css" href="http://www.postupstand.com/min/?f=skin/frontend/default/theme315/css/styles-ie.css&amp;1319243920" media="all" />
 <![endif]-->
 <!--[if lt IE 7]>
-<script type="text/javascript" src="http://www.postupstand.com/min/?f=/js/lib/ds-sleight.js,/skin/frontend/base/default/js/ie6.js&amp;1337264168"></script>
+<script type="text/javascript" src="http://www.postupstand.com/min/?f=/js/lib/ds-sleight.js,/skin/frontend/base/default/js/ie6.js&amp;1376396269"></script>
 <![endif]-->
 <!-- Optimized using GTspeed -->
 
@@ -96,7 +96,7 @@ optionalZipCountries = ["HK","IE","MO","PA"];
 <!-- END GOOGLE ANALYTICS CODE -->
 <script type="text/javascript">//<![CDATA[
         var Translator = new Translate([]);
-        //]]></script><script type="text/javascript" charset="iso-8859-1" src="https://server.iad.liveperson.net/hcp/html/mTag.js?site=33478297"></script><script async="true" type="text/javascript" src="https://s.adroll.com/j/roundtrip.js"></script></head>
+        //]]></script><script type="text/javascript" charset="iso-8859-1" src="https://server.iad.liveperson.net/hcp/html/mTag.js?site=33478297"></script></head>
 <body class=" cms-page-view cms-privacy">
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
@@ -119,7 +119,7 @@ optionalZipCountries = ["HK","IE","MO","PA"];
          
 <div class="header-container">
     <div class="header">
-                <a href="http://www.postupstand.com/" title="Post Up Stand" class="logo"><strong>Post Up Stand</strong><img src="http://www.postupstand.com/skin/frontend/default/theme315/images/postupstand/postupstand-logo.png" alt="Post Up Stand" width="101" height="101"></a>
+                <a href="http://www.postupstand.com/" title="Post Up Stand" class="logo"><strong>Post Up Stand</strong><img src="http://www.postupstand.com/skin/frontend/default/theme315/images/postupstand/postupstand-logo.png" alt="Post Up Stand" width="85" height="85"></a>
                 <p id="header-center-text"><em>48-hour turnaround. No rush fees, no set up fees.</em></p>
         <div class="quick-access">
             <div id="header-phone">800-935-3534</div>            <ul class="links">
@@ -149,7 +149,7 @@ optionalZipCountries = ["HK","IE","MO","PA"];
             </div>
 </div>
         <div class="main-container col2-left-layout">
-        	            <div class="main">
+            <div class="main">
                 <div class="col-main">
                                             <div class="page-title">
         <h1>Privacy Policy</h1>
@@ -170,28 +170,23 @@ optionalZipCountries = ["HK","IE","MO","PA"];
 <h3>Changes to Post-Up Stand's Privacy Policy</h3>
 <p>The contents of our privacy policy are subject to change at our discretion.</p>
 <p>Feel free to contact Post-Up Stand with any questions regarding our privacy policy at <a href="mailto:sales@postupstand.com">sales@postupstand.com</a> or 1-800-935-3534.</p></div>                </div>
-                <div class="col-left sidebar"><div class="block block-cart">
-        <div class="block-title">
-        <strong><span>My Cart</span></strong>
-    </div>
-    <div class="block-content">
-                        <p class="empty">You have no items in your shopping cart.</p>
-        </div>
-</div>
-<!--{VIEWED_PRODUCTS_5b7e6473f2d53274832fad5a5fa3dab7}--><div class="block block-list block-viewed">
+                <div class="col-left sidebar"><div class="block block-list block-viewed">
     <div class="block-title">
         <strong><span>Recently Viewed Products</span></strong>
     </div>
     <div class="block-content">
         <ol id="recently-viewed-items">
                     <li class="item">
-                <p class="product-name"><a href="http://www.postupstand.com/fabric-tension-display-8-ft-complete-unit-1-sided">Fabric Tension Display 8 FT - Complete Unit 1-sided</a></p>
+                <p class="product-name"><a href="http://www.postupstand.com/modular-display">Modular Display</a></p>
+            </li>
+                    <li class="item">
+                <p class="product-name"><a href="http://www.postupstand.com/small-quick-fab-table-top-display">Small Quick Fab Table Top Display</a></p>
             </li>
                 </ol>
         <script type="text/javascript">decorateList('recently-viewed-items');</script>
     </div>
 </div>
-<!--/{VIEWED_PRODUCTS_5b7e6473f2d53274832fad5a5fa3dab7}--></div>
+</div>
                 <div class="col-left-ads sidebar"><div id="left-ads" class="block block-left-ads">
 	<ul class="list-block">
 		<li><a href="http://www.postupstand.com/special-offer"><img src="http://www.postupstand.com/skin/frontend/default/theme315/images/postupstand/buttons/trade-show-specials-3.jpg" alt="Trade Show Specials" width="116" height="115"></a></li>
@@ -202,11 +197,11 @@ optionalZipCountries = ["HK","IE","MO","PA"];
 		<div id="lpButDivID-1349891294642"></div>
 		<script type="text/javascript" charset="UTF-8" src="https://server.iad.liveperson.net/hc/33478297/?cmd=mTagRepstate&amp;site=33478297&amp;buttonID=14&amp;divID=lpButDivID-1349891294642&amp;bt=1&amp;c=1"></script>
 		<!-- END LivePerson Button code -->
-		
-</li>
-		<li>
-			<a target="weatherhead11" href="http://www.postupstand.com/blog/post-up-stand-11th-fastest-growing-company-in-northeast-ohio/"><img alt="weatherhead11" src="http://www.postupstand.com/skin/frontend/default/theme315/images/postupstand/logos/weatherhead11-sm.jpg" width="112" height="64"></a>
 		</li>
+		<li><a target="weatherhead11" href="http://www.postupstand.com/blog/post-up-stand-11th-fastest-growing-company-in-northeast-ohio/"><img alt="weatherhead11" src="http://www.postupstand.com/skin/frontend/default/theme315/images/postupstand/logos/weatherhead11-sm.jpg" width="112" height="64"></a></li>
+		<li><a rel="nofollow" onclick="window.open('https://seals.resellerratings.com/landing.php?seller=40693','name','height=760,width=780,scrollbars=1'); 
+return false;" href="https://www.resellerratings.com"> <img style="border: none;" src="//seals.resellerratings.com/seal.php?seller=40693" alt=""></a></li>
+		<li><a href="https://interactivepdf.uniflip.com/2/73472/311393/pub/" target="_blank" onclick="_gaq.push(['_trackEvent', 'PDF', 'Download', 'E-Catalog Side Bar']);"><img src="http://www.postupstand.com/skin/frontend/default/theme315/images/postupstand/buttons/e-catalog-button-small.jpg" alt="Download e-Catalog" width="125" height="42"></a></li>
 	</ul>
 </div>
 </div>
@@ -340,7 +335,7 @@ optionalZipCountries = ["HK","IE","MO","PA"];
 						</li>
 						<li>
 							<a href="/shipping-containers">
-								<span>Banner Stand Shipping Container</span>
+								<span>Banner Stand Shipping Containers</span>
 							</a>
 						</li>
 						<li>
@@ -467,8 +462,8 @@ optionalZipCountries = ["HK","IE","MO","PA"];
                     </a>
 					<ul>
 						<li class="first">
-							<a href="/trade-show-shipping-containers-and-holders">
-								<span>Trade Show Accessories Shipping Container</span>
+							<a href="/shipping-containers">
+								<span>Trade Show Shipping Containers</span>
 							</a>
 						</li>
 						<li>
@@ -678,7 +673,7 @@ optionalZipCountries = ["HK","IE","MO","PA"];
 						</li>
 						<li>
 							<a href="/canopy-tents">
-								<span>Canopy Tents</span>
+								<span>Advertising Tents</span>
 							</a>
 						</li>
 					</ul>
@@ -774,7 +769,7 @@ optionalZipCountries = ["HK","IE","MO","PA"];
     <div class="clear"></div>
     <p align="center">
         Post-Up Stand, Inc, 5461 Dunham Road, Cleveland, OH 44137<br>
-		Copyright 2013 | <a href="/privacy">Privacy Policy</a> | <a href="/company-policies">Company Policies</a> | All Rights Reserved
+		Copyright 2014 | <a href="/privacy">Privacy Policy</a> | <a href="/company-policies">Company Policies</a> | All Rights Reserved
 	</p>
 </div>		<div class="clear"></div>
 </div>    </div>
@@ -817,24 +812,6 @@ var google_remarketing_only = true;
 </div>
 </noscript> 
 
-<script type="text/javascript">
-adroll_adv_id = "YQJDIMNE5NHOZPSQCZ237C";
-adroll_pix_id = "WT24X4NVMJDIXH3JG4XIMY";
-(function () {
-var oldonload = window.onload;
-window.onload = function(){
-   __adroll_loaded=true;
-   var scr = document.createElement("script");
-   var host = (("https:" == document.location.protocol) ? "https://s.adroll.com" : "http://a.adroll.com");
-   scr.setAttribute('async', 'true');
-   scr.type = "text/javascript";
-   scr.src = host + "/j/roundtrip.js";
-   ((document.getElementsByTagName('head') || [null])[0] ||
-    document.getElementsByTagName('script')[0].parentNode).appendChild(scr);
-   if(oldonload){oldonload()}};
-}());
-</script>
-
 <!-- Crasy Egg tracking code -->
 <script type="text/javascript">
 setTimeout(function(){var a=document.createElement("script");
@@ -842,5 +819,7 @@ var b=document.getElementsByTagName("script")[0];
 a.src=document.location.protocol+"//dnn506yrbagrg.cloudfront.net/pages/scripts/0017/4652.js?"+Math.floor(new Date().getTime()/3600000);
 a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
 </script>
+
+<script type="text/javascript" src="http://ipadd-path.com/js/15393.js" async="async"></script>
 
 </body></html>
